--- a/home2.html
+++ b/home2.html
@@ -27,7 +27,7 @@
       class="navbar navbar-expand-lg navbar-light px-4 py-3 "
     >
       <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Retrocafe</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -136,9 +136,9 @@
       <div class="container px-5 py-5 mt-5">
         <div class="row">
           <div class="col-md-7">
-            <h1>About Us</h1>
+            <h1 style="font-size:3rem;">About Us</h1>
 
-            <p class="mt-4">
+            <p style="font-size: large;" class="mt-5">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit.
               Veritatis atque impedit facilis officia praesentium modi minima
               perspiciatis delectus, esse maiores ullam omnis dignissimos amet
@@ -184,7 +184,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="card" id="carousel-card">
-                  <img id="carousel-img" src="images/header.jpg" alt="" />
+                  <img id="carousel-img" src="images/meal1.jpeg" alt="" />
 
                   <div class="card-body p-5">
                     <h2 id="card_title">
@@ -209,7 +209,7 @@
               </div>
               <div class="carousel-item">
                 <div class="card" id="carousel-card">
-                  <img id="carousel-img" src="images/header.jpg" alt="" />
+                  <img id="carousel-img" src="images/meal2.jpeg" alt="" />
                   <div class="card-body p-5">
                     <h2 id="card_title">
                       Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -234,7 +234,7 @@
               </div>
               <div class="carousel-item">
                 <div class="card" id="carousel-card">
-                  <img id="carousel-img" src="images/header.jpg" alt="" />
+                  <img id="carousel-img" src="images/meal3.jpeg" alt="" />
                   <div class="card-body p-5">
                     <h2 id="card_title">
                       Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -384,6 +384,53 @@
 
     <!-- why choose us end -->
 
+    <!-- signup form start -->
+
+    <div id="signup_container" class="container-fluid px-4">
+      <div class="row">
+        <div class="col-md-6 col-12">
+          <div id="signup_form" class="card shadow-lg px-5 py-5 col-md-6">
+            <h3 class="card-title mb-4">Sign Up</h3>
+
+            <div class="form-floating mb-3">
+              <input
+                type="email"
+                class="form-control"
+                id="floatingInput"
+                placeholder="name@example.com"
+              />
+              <label for="floatingInput">Email address</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input
+                type="password"
+                class="form-control"
+                id="floatingPassword"
+                placeholder="Password"
+              />
+              <label for="floatingPassword">Password</label>
+            </div>
+            <div class="form-floating">
+              <input
+                type="password"
+                class="form-control"
+                id="floatingPassword"
+                placeholder="Password"
+              />
+              <label for="floatingPassword">Phone</label>
+            </div>
+
+            <div class="d-flex justify-content-center mt-5">
+              <button id="signup_btn" class="btn btn-primary">Sign Up</button>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+
+    <!-- signup form end -->
 
 
     <!-- FAQ start -->
